<resources>
    <string name="app_name">Soukouss Challenge</string>
    <string name="bestScoresLabel">Meilleurs scores</string>
    <string name="startButton">JOUER</string>
    <string name="scoreButton">Scores</string>
    <string name="labelTimer">00:00</string>
    <string name="labelAction">Action à réaliser</string>
    <string name="labelScore">Score : </string>
    <string name="scoreNumber">0</string>
    <string name="labelPause">Le jeu est en pause</string>
    <string name="buttonQuit">Quitter</string>
    <string name="buttonResume">Reprendre</string>
    <string name="contentDescriptionIB">Pause button</string>
    <string name="actionShake">Secouez votre téléphone !</string>
    <string name="actionTurnOver">Retournez votre téléphone !</string>
    <string name="actionSwipeLeft">Faites un swipe vers la gauche !</string>
    <string name="actionSwipeRight">Faites un swipe vers la droite !</string>
    <string name="actionSwipeTop">Faites un swipe vers le haut !</string>
    <string name="actionSwipeBottom">Faites un swipe vers le bas !</string>
    <string name="actionSingleTap">Touchez une seule fois l\'écran !</string>
    <string name="actionDoubleTap">Touchez deux fois l\'écran !</string>
    <string name="actionHold">Maintenez votre doigt sur l\'écran !</string>
    <string name="actionError">Réessayez !</string>
    <string name="labelEndGame">La partie est terminée !</string>
    <string name="labelScoreSentence">Votre score est de :</string>
    <string name="buttonReplay">Rejouer</string>
    <string name="contentDescriptionDelete">Tout supprimer</string>
    <string name="labelDeleteAll">Supprimer tout les scores</string>
</resources>