<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.PopUpTheme"
    android:background="@drawable/customborder"
    tools:context=".controller.EndGamePopUpActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endgame_popup_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endgame_popup_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endgame_popup_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endgame_popup_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endgame_popup_guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <TextView
        android:id="@+id/endgame_popup_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelEndGame"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/endgame_popup_guideline1"
        app:layout_constraintBottom_toTopOf="@+id/endgame_popup_guideline2"/>

    <TextView
        android:id="@+id/endgame_popup_scoreSentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100sp"
        android:text="@string/labelScoreSentence"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/endgame_popup_guideline2"
        app:layout_constraintBottom_toTopOf="@+id/endgame_popup_guideline4"/>

    <TextView
        android:id="@+id/endgame_popup_scoreNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreNumber"
        android:textSize="50sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/endgame_popup_scoreSentence"
        app:layout_constraintBottom_toTopOf="@+id/endgame_popup_guideline4"/>

    <Button
        android:id="@+id/endgame_popup_quitButton"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/buttonQuit"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button"
        app:layout_constraintTop_toBottomOf="@+id/endgame_popup_guideline4"
        app:layout_constraintBottom_toTopOf="@+id/endgame_popup_guideline5"
        app:layout_constraintRight_toRightOf="@+id/endgame_popup_guideline3" />

    <Button
        android:id="@+id/endgame_popup_replay"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/buttonReplay"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/custom_button"
        app:layout_constraintLeft_toRightOf="@+id/endgame_popup_guideline3"
        app:layout_constraintTop_toBottomOf="@+id/endgame_popup_guideline4"
        app:layout_constraintBottom_toTopOf="@+id/endgame_popup_guideline5" />

</androidx.constraintlayout.widget.ConstraintLayout>