<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.GameActivity">

    <TextView
        android:id="@+id/activity_game_labelTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelTimer"
        android:textSize="32sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/activityGame_guideline1"
        app:layout_constraintBottom_toTopOf="@+id/activity_game_labelAction"/>

    <TextView
        android:id="@+id/activity_game_labelAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/labelAction"
        android:textSize="22sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_game_labelTimer" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activityGame_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activityGame_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85"/>

    <TextView
        android:id="@+id/activity_game_labelScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/labelScore"
        android:textSize="32sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityGame_guideline2"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activityGame_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/activityGame_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <ImageButton
        android:id="@+id/activity_game_pauseButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="@id/activityGame_guideline3"
        app:layout_constraintRight_toRightOf="@id/activityGame_guideline4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/activityGame_guideline1"
        android:src="@drawable/baseline_pause_black_18dp"
        android:contentDescription="@string/contentDescriptionIB" />



</androidx.constraintlayout.widget.ConstraintLayout>