<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.PopUpTheme"
    android:background="@drawable/customborder"
    tools:context=".controller.PausePopUpActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/popup_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/popup_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/popup_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/popupTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelPause"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/popup_guideline1"
        app:layout_constraintBottom_toTopOf="@+id/popupButtonQuit"/>

    <Button
        android:id="@+id/popupButtonQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonQuit"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/popupTextView"
        app:layout_constraintBottom_toTopOf="@+id/popup_guideline2"
        app:layout_constraintRight_toRightOf="@+id/popup_guideline3" />

    <Button
        android:id="@+id/popupButtonResume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonResume"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toRightOf="@+id/popup_guideline3"
        app:layout_constraintTop_toBottomOf="@+id/popupTextView"
        app:layout_constraintBottom_toTopOf="@+id/popup_guideline2" />



</androidx.constraintlayout.widget.ConstraintLayout>